# tIGAr

./: .gitignore  README.md  pixi.toml  pyproject.toml
demos/periodicity/: periodic-geometry.py  periodic-solution.py
demos/poisson/: poisson-nonzero-bc.py
tIGAr/: calculusUtils.py  common.py  timeIntegration.py
